--- a/frontend/poll-system/src/Cards.css
+++ b/frontend/poll-system/src/Cards.css
@@ -1,9 +1,9 @@
-div.login{
+.main-div{
     height: 100%;
-    margin: 0;
+    margin: 2% 0 0 0;
 }
 
-.main-div{
+.card-title-div{
     display: flex;
     justifyContent: center;
     alignItems: center;
@@ -19,7 +19,7 @@ div.login{
     padding: 4%;
 }
 
-.div-body{
+.card-div-body{
     display: flex;
     justifyContent: center;
     alignItems: center;
@@ -29,23 +29,4 @@ div.login{
     -webkit-box-shadow: 0px -4px 15px 1px rgba(0,0,0,0.18);
     box-shadow: 0px -4px 15px 1px rgba(0,0,0,0.18);
     text-align: center;
-}
-
-.description{
-    font-size: 32px;
-    margin-top: 30%;
-}
-
-.login-btn{
-    background-color: #EDF7FB !important;
-    border-color: #EDF7FB !important;
-    color: black !important;
-    font-size: 22px !important;
-    margin: 10px;
-    width: 20% !important;
-    border-radius: 15px !important;
-}
-
-.login-btn:hover {
-    background-color: #c7efff !important;
 }
