--- a/frontend/poll-system/src/components/Roles/Roles.css
+++ b/frontend/poll-system/src/components/Roles/Roles.css
@@ -1,21 +1,21 @@
-.description{
-    font-size: 32px;
-    margin-top: 30%;
-    margin-bottom: 3%;
+.description {
+  font-size: 32px;
+  margin-top: 30%;
+  margin-bottom: 3%;
 }
 
-.role-btn{
-    background-color: #EDF7FB !important;
-    border-color: #EDF7FB !important;
-    color: black !important;
-    font-size: 22px !important;
-    margin: 2%;
-    width: 20% !important;
-    border-radius: 10px !important;
-    padding: 1% 2% 1% 2%;
-    text-decoration: none;
+.role-btn {
+  background-color: #edf7fb !important;
+  border-color: #edf7fb !important;
+  color: black !important;
+  font-size: 22px !important;
+  margin: 2%;
+  width: 20% !important;
+  border-radius: 25px !important;
+  padding: 2% 5%;
+  text-decoration: none;
 }
 
 .role-btn:hover {
-    background-color: #c7efff !important;
+  background-color: #c7efff !important;
 }
