--- a/frontend/poll-system/src/components/VoteForm/VoteForm.css
+++ b/frontend/poll-system/src/components/VoteForm/VoteForm.css
@@ -3,9 +3,9 @@
   padding: 20px 30px;
 }
 
-.card-body {
+.card-title-div .card-body {
   background-color: #fffeff;
-  border-radius: 25px 25px 0px 0px !important;
+  border-radius: 25px 25px 0px 0px;
   box-shadow: 0px -1px 15px 1px rgba(0, 0, 0, 0.18);
 }
 
@@ -20,28 +20,41 @@
 
 .card-body .btn-1 {
   padding: 10px 16px;
-  border-radius: 90px !important;
+  border-radius: 90px;
   position: absolute;
   right: -30px;
   bottom: 30px;
-  font-size: 27px !important;
+  font-size: 27px;
   box-shadow: 0px 10px 15px 1px rgba(0, 0, 0, 0.329);
   letter-spacing: -1px;
 }
 
 .card-body .btn-2 {
   padding: 10px 16px;
-  border-radius: 90px !important;
+  border-radius: 90px;
   position: absolute;
   right: 90px;
   bottom: 30px;
-  font-size: 27px !important;
+  font-size: 27px;
   box-shadow: 0px 10px 15px 1px rgba(0, 0, 0, 0.329);
   letter-spacing: -1px;
+  background-color: #0d6efd;
+  color: white;
+  text-decoration: none;
+}
+
+.card-title-div .card-body .btn-2:hover {
+  background-color: #0655cc;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  transition-property: color, background-color, border-color, box-shadow;
+  transition-duration: 0.15s, 0.15s, 0.15s, 0.15s;
+  transition-timing-function: ease-in-out, ease-in-out, ease-in-out, ease-in-out;
+  transition-delay: 0s, 0s, 0s, 0s;
 }
 
 .card-body .no-results {
-  font-size: 22px !important;
+  font-size: 22px;
   display: flex;
   margin-top: 60px;
   text-align: center;
