--- a/frontend/poll-system/src/Cards.css
+++ b/frontend/poll-system/src/Cards.css
@@ -3,31 +3,31 @@
   padding: 5% 0 0 0;
 }
 
-.card-title-div {
+.main-div .card-title-div {
   display: flex;
   height: 100%;
   width: 37%;
-  background-color: #f4f4f4 !important;
+  background-color: #f4f4f4;
   margin: auto;
-  border-radius: 25px 25px 0px 0px !important;
+  border-radius: 25px 25px 0px 0px;
 }
 
-.card-title {
-  font-size: 40px !important;
+.main-div .card-title-div .card-title {
+  font-size: 40px;
   padding: 4% 0 1% 4%;
 }
 
-.card-description {
-  font-size: 20px !important;
+.main-div .card-title-div .card-description {
+  font-size: 20px;
   padding: 0% 0 1% 4%;
 }
 
-.card-div-body {
+.main-div .card-div-body {
   font-size: 30px;
   display: flex;
   height: 100%;
   background-color: #fffeff;
-  border-radius: 25px 25px 0px 0px !important;
+  border-radius: 25px 25px 0px 0px;
   box-shadow: 0px -4px 15px 1px rgba(0, 0, 0, 0.18);
   text-align: center;
 }
