--- a/frontend/poll-system/src/components/PollForm/PollForm.css
+++ b/frontend/poll-system/src/components/PollForm/PollForm.css
@@ -2,6 +2,10 @@
   margin: 8% 10% 8% 10%;
 }
 
+.main-div {
+  height: unset;
+}
+
 .main-div .group-style {
   margin-top: 5%;
   margin-bottom: 5%;
@@ -20,7 +24,7 @@
   box-shadow: none;
   border-radius: 20px;
   margin-top: 5px;
-  width: 100%;
+  width: 90%;
   float: right;
   font-size: 18px;
 }
@@ -32,7 +36,7 @@
   box-shadow: none;
   border-radius: 20px;
   margin-top: 5px;
-  width: 100%;
+  width: 90%;
   float: right;
   font-size: 18px;
 }
@@ -48,7 +52,7 @@
   font-size: 20px;
 }
 
-.main-div #create-btn{
+.main-div #create-btn {
   padding: 10px 16px;
   border-radius: 90px;
   position: absolute;
@@ -57,4 +61,27 @@
   font-size: 27px;
   box-shadow: 0px 10px 15px 1px rgba(0, 0, 0, 0.329);
   letter-spacing: -1px;
+}
+
+.main-div .group-style .delete-btn {
+  border: none;
+  background-color: unset;
+  color: black;
+  margin-left: 10px;
+}
+.main-div .group-style .choice {
+  display: flex;
+}
+
+.main-div .group-style .inner {
+  display: inline-block;
+}
+
+.main-div .group-style .name {
+  width: 150px;
+  margin-right: 10px;
+}
+
+.main-div .group-style .description {
+  width: 240px;
 }
