--- a/frontend/poll-system/src/components/PollDetails/PollDetails.css
+++ b/frontend/poll-system/src/components/PollDetails/PollDetails.css
@@ -1,34 +1,37 @@
+.main-dev .card-div-body {
+  height: unset;
+}
 .card-div-body #edit-btn {
-    padding: 10px 16px;
-    border-radius: 90px;
-    position: absolute;
-    right: 65px;
-    bottom: 30px;
-    font-size: 27px;
-    box-shadow: 0px 10px 15px 1px rgba(0, 0, 0, 0.329);
-    letter-spacing: -1px;
-    background-color: #0d6efd;
-    color: white;
-    text-decoration: none;
+  padding: 10px 16px;
+  border-radius: 90px;
+  position: absolute;
+  right: 65px;
+  bottom: 30px;
+  font-size: 27px;
+  box-shadow: 0px 10px 15px 1px rgba(0, 0, 0, 0.329);
+  letter-spacing: -1px;
+  background-color: #0d6efd;
+  color: white;
+  text-decoration: none;
 }
 
 .card-div-body #edit-btn:hover {
-    background-color: #0655cc;
-    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+  background-color: #0655cc;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
     border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-    transition-property: color, background-color, border-color, box-shadow;
-    transition-duration: 0.15s, 0.15s, 0.15s, 0.15s;
-    transition-timing-function: ease-in-out, ease-in-out, ease-in-out, ease-in-out;
-    transition-delay: 0s, 0s, 0s, 0s;
+  transition-property: color, background-color, border-color, box-shadow;
+  transition-duration: 0.15s, 0.15s, 0.15s, 0.15s;
+  transition-timing-function: ease-in-out, ease-in-out, ease-in-out, ease-in-out;
+  transition-delay: 0s, 0s, 0s, 0s;
 }
 
 .card-div-body #run-btn {
-    padding: 10px 16px;
-    border-radius: 90px;
-    position: absolute;
-    right: -30px;
-    bottom: 30px;
-    font-size: 27px;
-    box-shadow: 0px 10px 15px 1px rgba(0, 0, 0, 0.329);
-    letter-spacing: -1px;
+  padding: 10px 16px;
+  border-radius: 90px;
+  position: absolute;
+  right: -50px;
+  bottom: 30px;
+  font-size: 27px;
+  box-shadow: 0px 10px 15px 1px rgba(0, 0, 0, 0.329);
+  letter-spacing: -1px;
 }
