Changed CSS in Choice, and added "N/A" when choice is empty

--- a/frontend/poll-system/src/components/PollForm/Choice/Choice.css
+++ b/frontend/poll-system/src/components/PollForm/Choice/Choice.css
@@ -19,10 +19,10 @@
 }
 
 .main-div .group-style .name {
-  width: 150px;
+  width: 150px !important;
   margin-right: 10px;
 }
 
 .main-div .group-style .description {
-  width: 240px;
+  width: 240px !important;
 }
