--- a/frontend/poll-system/src/Cards.css
+++ b/frontend/poll-system/src/Cards.css
@@ -31,3 +31,11 @@
   box-shadow: 0px -4px 15px 1px rgba(0, 0, 0, 0.18);
   text-align: center;
 }
+
+.main-div .card-title-div .home-btn {
+  float: right;
+  margin-right: 30px;
+  margin-top: 5px;
+  width: 34px;
+  height: 34px;
+}
