--- a/frontend/poll-system/src/components/AdminLogin/AdminLogin.css
+++ b/frontend/poll-system/src/components/AdminLogin/AdminLogin.css
@@ -1,15 +1,21 @@
-#login-description {
-  font-size: 20px;
-  margin: 30% auto 3% auto;
-  width: 70%;
-}
+/*#login-description {*/
+/*  !*font-size: 20px;*!*/
+/*  margin: 15% auto 3% auto;*/
+/*  width: 70%;*/
+/*}*/
 
-#input-group-style {
+#form-group-style {
   width: 50%;
-  margin: 2% auto;
+  margin: 25% auto 3% auto;
 }
 
-.main-div #passcode-box[type='text'] {
+.main-div .login-label{
+  font-size: 24px;
+  margin-top: 5%;
+  float: left;
+}
+
+.main-div #email-box[type='email'] {
   background-color: #edf7fb;
   border-color: #edf7fb;
   outline: none;
@@ -18,7 +24,16 @@
   font-size: 20px;
 }
 
-.main-div #passcode-box[type='text']:focus {
+.main-div #pw-box[type='password'] {
+  background-color: #edf7fb;
+  border-color: #edf7fb;
+  outline: none;
+  box-shadow: none;
+  border-radius: 20px;
+  font-size: 20px;
+}
+
+.main-div #pw-box[type='password']:focus {
   z-index: 0;
 }
 
@@ -26,14 +41,24 @@
   padding: 10px 16px;
   border-radius: 90px;
   position: absolute;
-  right: -30px;
-  bottom: -30px;
+  right: 130px;
+  bottom: 315px;
   font-size: 27px;
   box-shadow: 0px 10px 15px 1px rgba(0, 0, 0, 0.329);
   letter-spacing: -1px;
   text-decoration: none;
   background-color: #0d6efd;
   color: white;
+}
+
+#sign-up {
+  font-size: 24px;
+  margin-top: 5%;
+  color: #0d6efd;
+  text-decoration: underline;
+  background-color: transparent;
+  border-style: none;
+  box-shadow: none;
 }
 
 #incorrectMessage {
