--- a/frontend/poll-system/src/components/AdminLogin/AdminLogin.css
+++ b/frontend/poll-system/src/components/AdminLogin/AdminLogin.css
@@ -1,15 +1,9 @@
-/*#login-description {*/
-/*  !*font-size: 20px;*!*/
-/*  margin: 15% auto 3% auto;*/
-/*  width: 70%;*/
-/*}*/
-
 #form-group-style {
   width: 50%;
   margin: 25% auto 3% auto;
 }
 
-.main-div .login-label{
+.main-div .login-label {
   font-size: 24px;
   margin-top: 5%;
   float: left;
@@ -33,6 +27,10 @@
   font-size: 20px;
 }
 
+.main-div .password-group {
+  position: relative;
+}
+
 .main-div #pw-box[type='password']:focus {
   z-index: 0;
 }
@@ -41,8 +39,8 @@
   padding: 10px 16px;
   border-radius: 90px;
   position: absolute;
-  right: 130px;
-  bottom: 315px;
+  right: 0px;
+  bottom: -50px;
   font-size: 27px;
   box-shadow: 0px 10px 15px 1px rgba(0, 0, 0, 0.329);
   letter-spacing: -1px;
