--- a/frontend/poll-system/src/components/AdminLogin/AdminLogin.css
+++ b/frontend/poll-system/src/components/AdminLogin/AdminLogin.css
@@ -39,8 +39,8 @@
   padding: 10px 16px;
   border-radius: 90px;
   position: absolute;
-  right: 0px;
-  bottom: -50px;
+  right: -20px;
+  bottom: -40px;
   font-size: 27px;
   box-shadow: 0px 10px 15px 1px rgba(0, 0, 0, 0.329);
   letter-spacing: -1px;
@@ -70,8 +70,8 @@
   border-style: none;
 }
 
-#pop-body{
-  font-family: "Playfair Display";
+#pop-body {
+  font-family: 'Playfair Display';
   font-size: 16px;
   font-weight: bold;
   text-align: center;
