--- a/frontend/poll-system/src/components/PollDetails/PollDetails.css
+++ b/frontend/poll-system/src/components/PollDetails/PollDetails.css
@@ -6,8 +6,8 @@
   box-shadow: 0px 10px 15px 1px rgba(0, 0, 0, 0.329);
   letter-spacing: -1px;
 }
-.card-div-body .edit {
-  right: 70px;
+.card-div-body .btn-1.edit {
+  right: 112px;
   bottom: 30px;
   background-color: #0d6efd;
   color: white;
